--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,2 @@
-VITE_FIREBASE_API_KEY=
-VITE_FIREBASE_AUTH_DOMAIN=
-VITE_FIREBASE_PROJECT_ID=
-VITE_FIREBASE_STORAGE_BUCKET=
-VITE_FIREBASE_MESSAGING_SENDER_ID=
-VITE_FIREBASE_APP_ID=
+GEMINI_API_KEY=your_real_key_here
+PORT=3000
