--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
   "crons": [
     {
       "path": "/api/cron",
-      "schedule": "0 * * * *"
+      "schedule": "*/5 * * * *"
     }
   ],
   "rewrites": [
