--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,11 @@
-VITE_FIREBASE_CONFIG={"apiKey":"YOUR_KEY","authDomain":"YOUR_DOMAIN","projectId":"YOUR_PROJECT_ID","storageBucket":"YOUR_BUCKET","messagingSenderId":"YOUR_SENDER_ID","appId":"YOUR_FIREBASE_APP_ID"}
-VITE_APP_ID=releaseupdates
-# VITE_AUTH_TOKEN=
+Key: VITE_FIREBASE_CONFIG
+
+Value: {"apiKey":"...","authDomain":"...","projectId":"...","storageBucket":"...","messagingSenderId":"...","appId":"..."} (The entire JSON string)
+
+Key: GEMINI_API_KEY
+
+Value: AIzaSyB9wPYEjVVcJk05_34ZzCtPCSE143kG6sY
+
+Key: VITE_APP_ID
+
+Value: releaseupdates
